--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
+
 <!DOCTYPE html>
 <html>
 <head>
 	<title>RGB GUESSER</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<script type="text/javascript" src="main.js"></script>
 </head>
 <body>
 <div class="header">
